# practice-static-analysis

./: CMakeLists.txt  README.md  README_old.md  inc.bc  inc.c  inc.ll  test.cpp  testcase.c
analysis/: CMakeLists.txt  LiveVariableInBranchSkeleton.cpp  LiveVariableInBranchSkeleton.h
hw1/: CMakeLists.txt  functionarg.cpp
hw7/: CMakeLists.txt  InterSignAnalysis.cpp  InterSignAnalysis.h
skeleton/: Skeleton.cpp
